--- a/templates/sponsors/sponsor_list.html
+++ b/templates/sponsors/sponsor_list.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% load typogrify %}
 
-{% block title %}Sponsors{% endblock %}
+{% block body_class %}sponsorship{% endblock %}
+
 
 {% block content %}
-  <ul class="sponsors">
+  <ul class="sponsor-list">
   {% for sponsor in object_list %}
     <li>
       {% if sponsor.logo %}
